--- a/views/slate.pug
+++ b/views/slate.pug
@@ -37,6 +37,7 @@ block append footer
     script(src="/editor/lib/codemirror.js")
     script(src="/editor/mode/javascript/javascript.js")
     script(src="/javascripts/modal.js")
+    script(src="/javascripts/yagna.js")
     script.
         (function(w,d){
             //- expand console window
