--- a/views/partials/config-form.pug
+++ b/views/partials/config-form.pug
@@ -55,6 +55,8 @@
 					use(xlink:href='/icons.svg#play-fill')
 				svg.bi(width='16' height='16' fill='currentColor' class="loading-icon")
 					use(xlink:href='/icons.svg#arrow-clockwise')
+				span.loading-text
+					| Yagna Loading...
 				//- |Run
 			button.red(value="Stop" id="stopPen" class="btn" title='Stop Slate' disabled="disabled")
 				svg.bi(width='16' height='16' fill='currentColor')
