add video button and file interval

--- a/views/index.pug
+++ b/views/index.pug
@@ -12,5 +12,10 @@ block content
             h2(style="line-height:1.5em;")
               |Access all the computing power you need
             p golem SLATE is a code pen for creating work requests on the golem network - a decentralized computing platform.
-            a.btn.mt-3(href="/t/instances/create")
+            a.btn.my-3(href="/t/instances/create")
               |Create a new SLATE
+            br
+            a(href="https://youtu.be/P7bNvsRU7P0" target="_blank")
+              svg.bi.mr-2(width='22' height='22' fill='currentColor' style="vertical-align:middle")
+                use(xlink:href='/icons.svg#play-btn')
+              |Watch Demo Video
