--- a/views/partials/filelist.pug
+++ b/views/partials/filelist.pug
@@ -10,11 +10,11 @@ label#file-upload-label.drop-label(for='file-upload-field')
     br
     |     Click or Drop Files Here
     input#file-upload-field(type='file' name='uploads[]' multiple='multiple')
-.refresh-wrap
-    a#refresh-files-btn.text-five.d-inline-flex.align-items-center(href="#")
-        svg.bi.mr-2(width='22' height='22' fill='currentColor')
-            use(xlink:href='/icons.svg#arrow-clockwise')
-        | Refresh File List
+//- .refresh-wrap
+//-     a#refresh-files-btn.text-five.d-inline-flex.align-items-center(href="#")
+//-         svg.bi.mr-2(width='22' height='22' fill='currentColor')
+//-             use(xlink:href='/icons.svg#arrow-clockwise')
+//-         | Refresh File List
 .filelist-wrapper
 
 //- JS
