update demo video

--- a/views/index.pug
+++ b/views/index.pug
@@ -15,7 +15,7 @@ block content
             a.btn.my-3(href="/t/instances/create")
               |Create a new SLATE
             br
-            a(href="https://youtu.be/P7bNvsRU7P0" target="_blank")
+            a(href="https://www.youtube.com/watch?v=ZtcffGY5asY" target="_blank")
               svg.bi.mr-2(width='22' height='22' fill='currentColor' style="vertical-align:middle")
                 use(xlink:href='/icons.svg#play-btn')
               |Watch Demo Video
