--- a/views/partials/filelist.pug
+++ b/views/partials/filelist.pug
@@ -1,5 +1,5 @@
 //- html
-a.mb-2(href="https://youtu.be/P7bNvsRU7P0" target="_blank")
+a.mb-2(href="https://www.youtube.com/watch?v=ZtcffGY5asY" target="_blank")
     svg.bi.mr-3(width='22' height='22' fill='currentColor' style="vertical-align:middle")
         use(xlink:href='/icons.svg#play-btn')
     |Watch SLATE Demo Video
